sectiond and grainy images

--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 				</a>
 			</li>
 			<li class="sections-nav-item">
+				<a href="#contact" class="nav-link sections-nav-link goto-section">
+					Contact
+				</a>
+			</li>
+			<li class="sections-nav-item">
 				<div class="sections-nav-info">
-					<span class="icon" data-jam="envelope"></span>
+					<!-- <span class="icon" data-jam="envelope"></span> -->
 					<a href="mailto:info@willemvanopstal.nl">info@willemvanopstal.nl</a><br>
-					<span class="icon" data-jam="phone"></span>
+					<!-- <span class="icon" data-jam="phone"></span> -->
 					<a href="tel:+31612345678">+316 123 45 678</a></br>
-					<span class="icon" data-jam="paper-plane"></span>
+					<!-- <span class="icon" data-jam="paper-plane"></span> -->
 					<a href="https://maps.google.com" target="_blank">Delft</a>
 				</div>
 			</li>
@@ -109,11 +114,12 @@
 			<div class="container">
 			<div class="row">
 				<div class="col cover-bg-div col-11 col-sm-8 col-md-6 mx-auto p-4">
-					<h2>Uniek</h2>
+					<h2>Van onzichtbaar belang</h2>
 					<p>
-						I'm freelance webdeveloper lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-						diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-						voluptua. At vero eos et accusam et
+						Het blijft mateloos fascinerend hoe iets dat we normaal niet kunnen zien - de zeebodem - van zeer groot belang is voor de samenleving. Veilige navigatie, onze waterhuishouding en het floreren van de natuur.
+					</p>
+					<p>
+						Met moderne technieken kunnen we deze wereld nu ook in kaart brengen, beschikbare data bijeen brengen en visualiseren. Zo creëren we nieuwe inzichten in deze fascinerende wereld onder en op het wateroppervlak.
 					</p>
 				</div>
 			</div>
@@ -196,36 +202,60 @@
 								<div class="themes">
 						      <div class="themes-item">
 						        <!-- <span class="icon" data-jam="water-drop"></span> -->
-										<div class="theme-image greyscale" style="background-image:url('/img/laagwater_inkijk.jpeg');"></div>
+										<div class="wrapper">
+											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/laagwater_inkijk.jpeg');"></div>
+										</div>
 										<div class="coloured-border-green"></div>
 										<h4>Water</h4>
 						        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="map-marker"></span> -->
-										<div class="theme-image greyscale" style="background-image:url('/img/enc.webp');"></div>
+										<div class="wrapper">
+											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/enc.webp');"></div>
+										</div>
 										<div class="coloured-border-yellow"></div>
 						        <h4>Geografie en navigatie</h4>
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="station"></span> -->
-										<div class="theme-image greyscale" style="background-image:url('/img/brug.jpg');"></div>
+										<div class="wrapper">
+											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/brug.jpg');"></div>
+										</div>
 										<div class="coloured-border-red"></div>
 						        <h4>Infrastructuur</h4>
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="anchor"></span> -->
-										<div class="theme-image greyscale" style="background-image:url('/img/scheepvaart.jpg');"></div>
+										<div class="wrapper">
+											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/scheepvaart.jpg');"></div>
+										</div>
 										<div class="coloured-border-blue"></div>
 						        <h4>Scheepvaart</h4>
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						      </div>
-
 						    </div>
 
+
+								<div class="themes-note">
+									<span class="icon" data-jam="lightbulb"></span>
+									<h4>Breder dan dit</h4>
+									<p>Ik doe graag dingen waar ik zelf enthousiast van word. Onder andere binnen bovenstaande thema's. Dat wil alleen niet zeggen dat ik ál het andere direct uitsluit. Ik kom graag in contact met u om onze raakvlakken te ontdekken.</p>
+								</div>
+
 				</div>
+			</div>
+		</div>
+
+		<div class="container" id="contact">
+			<div class="row">
+				<div class="col">
+
+								<h1>Contact</h1>
+
+								<p>Enthousiast of benieuwd geraakt? Stuur mij een mailtje, uiteraard geheel vrijblijvend.
 			</div>
 		</div>
 
