contact and fixing

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu congue velit. Etiam luctus, est rhoncus varius pharetra, arcu turpis laoreet quam, et aliquet nunc lacus nec quam. Nunc eget velit in elit feugiat dictum. Aliquam erat volutpat. Quisque non arcu ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent facilisis sapien et mauris fermentum venenatis. Quisque sed ex eu tellus bibendum pellentesque. Nunc pulvinar metus in purus laoreet molestie. Fusce lacinia eu orci ac pellentesque. Cras sodales, justo ac ullamcorper mattis, ante odio lobortis odio, eu pharetra est lectus a nulla.
 								</p>
-								<p>
+								<!-- <p>
 									Mauris quis euismod mauris. Nunc feugiat feugiat metus interdum pretium. Quisque urna est, convallis in consectetur accumsan, mattis eget nulla. Vivamus vel nibh et elit venenatis consequat non in augue. Donec ornare lorem eget quam facilisis tincidunt. Aliquam vel justo tincidunt, ornare metus sed, rutrum enim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis aliquam enim vitae neque dictum, id commodo diam rhoncus. Pellentesque dictum tristique lacus, non vestibulum nibh vehicula sed.
-								</p>
+								</p> -->
 
 				</div>
 			</div>
@@ -202,7 +202,7 @@
 								<div class="themes">
 						      <div class="themes-item">
 						        <!-- <span class="icon" data-jam="water-drop"></span> -->
-										<div class="wrapper">
+										<div class="image-wrapper">
 											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/laagwater_inkijk.jpeg');"></div>
 										</div>
 										<div class="coloured-border-green"></div>
@@ -211,7 +211,7 @@
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="map-marker"></span> -->
-										<div class="wrapper">
+										<div class="image-wrapper">
 											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/enc.webp');"></div>
 										</div>
 										<div class="coloured-border-yellow"></div>
@@ -220,7 +220,7 @@
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="station"></span> -->
-										<div class="wrapper">
+										<div class="image-wrapper">
 											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/brug.jpg');"></div>
 										</div>
 										<div class="coloured-border-red"></div>
@@ -229,7 +229,7 @@
 						      </div>
 						      <div class="themes-item">
 										<!-- <span class="icon" data-jam="anchor"></span> -->
-										<div class="wrapper">
+										<div class="image-wrapper">
 											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/scheepvaart.jpg');"></div>
 										</div>
 										<div class="coloured-border-blue"></div>
@@ -256,6 +256,20 @@
 								<h1>Contact</h1>
 
 								<p>Enthousiast of benieuwd geraakt? Stuur mij een mailtje, uiteraard geheel vrijblijvend.
+
+								<ul class="contact-list">
+									<li class="contact-item">
+										<span class="icon" data-jam="envelope"></span>
+										<a href="mailto:info@willemvanopstal.nl">info@willemvanopstal.nl</a>
+									</li>
+									<li class="contact-item">
+										<span class="icon" data-jam="phone"></span>
+										<a href="tel:+31612345678">+316 123 45 678</a>
+									</li>
+									<li class="contact-item">
+										<span class="icon" data-jam="paper-plane"></span>
+										<a href="https://maps.google.com" target="_blank">Delft</a>
+								</ul>
 			</div>
 		</div>
 
@@ -285,5 +299,6 @@
 
 <script src="https://unpkg.com/jam-icons/js/jam.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/smoothscroll.js"></script>
 
 </html>
