redirect to spurkpoel

--- a/index.html
+++ b/index.html
@@ -1,304 +1,6 @@
-<!DOCTYPE html>
-<html lang="cs">
-
 <head>
-	<meta charset="UTF-8">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&amp;display=swap" rel="stylesheet"> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link href="css/styles.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/jam-icons@2.0.0/css/jam-icons.min.css">
-
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Josefin+Sans:wght@500;700&family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=PT+Sans&display=swap" rel="stylesheet">
-
-
-<title>Willem</title>
+  <meta http-equiv="refresh" content="0; URL=/spurkpoel/dashboard" />
 </head>
-
-<body class="with-header position-relative" data-spy="scroll" data-target="#sections-nav" data-offset="150">
-
-<div class="wrapper">
-
-  <header class="header">
-		<div class="container-fluid d-flex align-items-center justify-content-between container">
-			<a href="index.html" class="header-brand">
-				<!-- <img src="img/image.svg" data-light-src="img/image.svg" data-dark-src="img/image.svg" alt="WEO"> -->
-				<span>Willem</span>
-			</a>
-			<button class="sections-nav-toggler" aria-label="Toggle navigation">
-				<span class="sections-nav-toggler-bar"></span>
-				<span class="sections-nav-toggler-bar"></span>
-				<span class="sections-nav-toggler-bar"></span>
-				<span class="sections-nav-toggler-bar"></span>
-			</button>
-		</div>
-	</header>
-
-
-
-	<nav class="sections-nav-container">
-		<ul id="sections-nav" class="nav sections-nav container">
-			<li class="sections-nav-item">
-				<a href="#intro" class="nav-link sections-nav-link goto-section active">
-					Intro
-				</a>
-			</li>
-			<li class="sections-nav-item">
-				<a href="#over" class="nav-link sections-nav-link goto-section">
-					Over
-				</a>
-			</li>
-			<li class="sections-nav-item">
-				<a href="#services" class="nav-link sections-nav-link goto-section">
-					Services
-				</a>
-			</li>
-			<li class="sections-nav-item">
-				<a href="#themas" class="nav-link sections-nav-link goto-section">
-					Thema's
-				</a>
-			</li>
-			<li class="sections-nav-item">
-				<a href="#contact" class="nav-link sections-nav-link goto-section">
-					Contact
-				</a>
-			</li>
-			<li class="sections-nav-item">
-				<div class="sections-nav-info">
-					<!-- <span class="icon" data-jam="envelope"></span> -->
-					<a href="mailto:info@willemvanopstal.nl">info@willemvanopstal.nl</a><br>
-					<!-- <span class="icon" data-jam="phone"></span> -->
-					<a href="tel:+31612345678">+316 123 45 678</a></br>
-					<!-- <span class="icon" data-jam="paper-plane"></span> -->
-					<a href="https://maps.google.com" target="_blank">Delft</a>
-				</div>
-			</li>
-		</ul>
-	</nav>
-
-	<main class="content">
-
-		<div class="container" id="intro">
-			<div class="row">
-				<div class="col col-md-9">
-
-								<p class="lead">
-									Innovatievraagstuk op het gebied van <span class="emph">water</span>, <span class="emph">geo</span> of <span class="emph">data</span>? Ik denk en doe graag mee om uw uitdaging om te zetten in <span class="emph">impact</span> op de samenleving.
-								</p>
-
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col col-md-7">
-
-								<div class="wave" >
-									<svg>
-										<path d="M10,10 L50,100 L90,50"></path>
-									</svg>
-								</div>
-								<p>
-									Mijn unieke <a href="hello">werkwijze</a> gaat altijd uit van de menselijke invloed. Data of fysieke fenomenen zijn enkel onderdeel van de oplossing of het probleem. Uiteindelijk gaat het altijd om wat de mens ermee doet.
-								</p>
-								<p>
-									Ik ga graag samen met u de uitdaging aan om het nut van geografische data in te zien en de relevantie voor uw project of producten te bewijzen. <span class="emph">Neemt u even contact op?</span>
-								</p>
-
-				</div>
-			</div>
-		</div>
-
-		<div class="imaged-spacer greyscale my-5" style="background-image:url('img/laagwater_inkijk.jpeg')" id="impact"></div>
-		<div class="main-cover">
-			<div class="container">
-			<div class="row">
-				<div class="col cover-bg-div col-11 col-sm-8 col-md-6 mx-auto p-4">
-					<h2>Van onzichtbaar belang</h2>
-					<p>
-						Het blijft mateloos fascinerend hoe iets dat we normaal niet kunnen zien - de zeebodem - van zeer groot belang is voor de samenleving. Veilige navigatie, onze waterhuishouding en het floreren van de natuur.
-					</p>
-					<p>
-						Met moderne technieken kunnen we deze wereld nu ook in kaart brengen, beschikbare data bijeen brengen en visualiseren. Zo creëren we nieuwe inzichten in deze fascinerende wereld onder en op het wateroppervlak.
-					</p>
-				</div>
-			</div>
-		</div>
-
-		</div>
-
-
-
-		<div class="container" id="over">
-			<div class="row">
-				<div class="col">
-
-								<h1>About me</h1>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu congue velit. Etiam luctus, est rhoncus varius pharetra, arcu turpis laoreet quam, et aliquet nunc lacus nec quam. Nunc eget velit in elit feugiat dictum. Aliquam erat volutpat. Quisque non arcu ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent facilisis sapien et mauris fermentum venenatis. Quisque sed ex eu tellus bibendum pellentesque. Nunc pulvinar metus in purus laoreet molestie. Fusce lacinia eu orci ac pellentesque. Cras sodales, justo ac ullamcorper mattis, ante odio lobortis odio, eu pharetra est lectus a nulla.
-								</p>
-								<!-- <p>
-									Mauris quis euismod mauris. Nunc feugiat feugiat metus interdum pretium. Quisque urna est, convallis in consectetur accumsan, mattis eget nulla. Vivamus vel nibh et elit venenatis consequat non in augue. Donec ornare lorem eget quam facilisis tincidunt. Aliquam vel justo tincidunt, ornare metus sed, rutrum enim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis aliquam enim vitae neque dictum, id commodo diam rhoncus. Pellentesque dictum tristique lacus, non vestibulum nibh vehicula sed.
-								</p> -->
-
-				</div>
-			</div>
-		</div>
-
-		<div>
-			<div class="coloured-spacer"></div>
-		</div>
-
-		<div class="container" id="services">
-			<div class="row">
-				<div class="col">
-
-								<h1>Services</h1>
-
-								<div class="features">
-						      <div class="features-item">
-						        <span class="icon" data-jam="directions"></span>
-						        <h4>Project Management</h4>
-						        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="features-item">
-										<span class="icon" data-jam="map"></span>
-						        <h4>Cartography</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="features-item">
-										<span class="icon" data-jam="layers"></span>
-						        <h4>Web mapping</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="features-item">
-										<span class="icon" data-jam="branch"></span>
-						        <h4>Spatial Problem Solving</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="features-item">
-										<span class="icon" data-jam="flask"></span>
-						        <h4>Research</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="features-item">
-										<span class="icon" data-jam="align-left"></span>
-						        <h4>Copywriting</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-
-						    </div>
-
-				</div>
-			</div>
-		</div>
-
-		<div class="container" id="themas">
-			<div class="row">
-				<div class="col">
-
-								<h1>Thema's</h1>
-
-								<div class="themes">
-						      <div class="themes-item">
-						        <!-- <span class="icon" data-jam="water-drop"></span> -->
-										<div class="image-wrapper">
-											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/laagwater_inkijk.jpeg');"></div>
-										</div>
-										<div class="coloured-border-green"></div>
-										<h4>Water</h4>
-						        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="themes-item">
-										<!-- <span class="icon" data-jam="map-marker"></span> -->
-										<div class="image-wrapper">
-											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/enc.webp');"></div>
-										</div>
-										<div class="coloured-border-yellow"></div>
-						        <h4>Geografie en navigatie</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="themes-item">
-										<!-- <span class="icon" data-jam="station"></span> -->
-										<div class="image-wrapper">
-											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/brug.jpg');"></div>
-										</div>
-										<div class="coloured-border-red"></div>
-						        <h4>Infrastructuur</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						      <div class="themes-item">
-										<!-- <span class="icon" data-jam="anchor"></span> -->
-										<div class="image-wrapper">
-											<div class="theme-image" style="background-image: url('/img/yellow-green-blue-gggrain.svg'),url('/img/scheepvaart.jpg');"></div>
-										</div>
-										<div class="coloured-border-blue"></div>
-						        <h4>Scheepvaart</h4>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						      </div>
-						    </div>
-
-
-								<div class="themes-note">
-									<span class="icon" data-jam="lightbulb"></span>
-									<h4>Breder dan dit</h4>
-									<p>Ik doe graag dingen waar ik zelf enthousiast van word. Onder andere binnen bovenstaande thema's. Dat wil alleen niet zeggen dat ik ál het andere direct uitsluit. Ik kom graag in contact met u om onze raakvlakken te ontdekken.</p>
-								</div>
-
-				</div>
-			</div>
-		</div>
-
-		<div class="container" id="contact">
-			<div class="row">
-				<div class="col">
-
-								<h1>Contact</h1>
-
-								<p>Enthousiast of benieuwd geraakt? Stuur mij een mailtje, uiteraard geheel vrijblijvend.
-
-								<ul class="contact-list">
-									<li class="contact-item">
-										<span class="icon" data-jam="envelope"></span>
-										<a href="mailto:info@willemvanopstal.nl">info@willemvanopstal.nl</a>
-									</li>
-									<li class="contact-item">
-										<span class="icon" data-jam="phone"></span>
-										<a href="tel:+31612345678">+316 123 45 678</a>
-									</li>
-									<li class="contact-item">
-										<span class="icon" data-jam="paper-plane"></span>
-										<a href="https://maps.google.com" target="_blank">Delft</a>
-								</ul>
-			</div>
-		</div>
-
-		<div style="height: 5rem">
-		</div>
-
-	</main>
-
-	<footer>
-		<div class="wave" >
-			<svg>
-				<path d="M10,10 L50,100 L90,50"></path>
-			</svg>
-		</div>
-		<div class="footer container-fluid d-flex align-items-center justify-content-center container">
-			&copy; 2022 -  willem van opstal
-		</div>
-	</footer>
-
-</div>
-
+<body>
+  <p>If you are not redirected in five seconds, <a href="http://willemvanopstal.nl/spurkpoel/dashboard">click here</a>.</p>
 </body>
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-<script src="https://unpkg.com/jam-icons/js/jam.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/smoothscroll.js"></script>
-
-</html>
